[package]
name = "arceus-net"
version = "0.1.0"
authors = ["Aquild <aquild@aquild.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-io = "0.3"
async-std = "1.6"
# rustls = "0.18"

[dependencies.async-tls]
version = "0.9"
features = ["early-data"]

[dependencies.pyo3]
version = "0.11"
features = ["extension-module"]

[lib]
name = "arceus_net"
crate-type = ["cdylib"]
